--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,16 +128,17 @@
         </div>
 
         <div class="gallery">
-            <div id="gallery1"></div>
-        </div>
-
-        <div class="gallery">
             <h6>Our Top Sellers</h6>
             <div id="gallery2"></div>
             <div class="gallery-button">
                 <button>browse more</button>
             </div>
         </div>
+
+        <div class="gallery">
+            <div id="gallery1"></div>
+        </div>
+
     </div>
 
     <!-- ================ -->
@@ -161,7 +162,7 @@
                 </div>
 
             </div>
-            <div class="footer-top-header wrapper1" id="footer-top-header">
+            <div class="footer-top-header " id="footer-top-header">
                 <p>Papori</p>
             </div>
             <div class="footer-top-info1 wrapper1 right" id="footer-top-info1 ">
@@ -327,8 +328,7 @@
         <div class="product-modal-container">
             <div class="product-modal-grid">
                 <i id="close-modal" class="fa-solid fa-x"></i>
-                <div id="product-image" class="product-image">
-                </div>
+                <div id="product-image" class="product-image"></div>
                 <div class="product-title">
                     <div id="product-name" class="product-name"></div>
                     <div id="product-owner" class="product-owner">
@@ -364,25 +364,26 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- end of product modal -->
+    <!-- end of product modal -->
 
-        <!-- jquery -->
-        <script src="https://kit.fontawesome.com/ab86417da5.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- jquery -->
+    <script src="https://kit.fontawesome.com/ab86417da5.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-        <!-- swiper js  -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <!-- swiper js  -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 
-        <!-- <script src="js/landingpage.js"></script> -->
-        <script src="js/swiper.js"></script>
-        <script src="js/script.js"></script>
+    <!-- <script src="js/landingpage.js"></script> -->
+    <script src="js/swiper.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
